--- a/Web/Views/Organization/Homepage.cshtml
+++ b/Web/Views/Organization/Homepage.cshtml
@@ -28,7 +28,7 @@
 <body style="overflow-y:hidden; overflow-x:hidden;">
     <div class="col-md-4 ">
         <div class="well" id="topVolunteers" style="height: 490px;">
-            <h2>Top Volunteers</h2>
+            <h2>Top Candidates</h2>
             <table class="table">
                 <tbody>
                     @foreach (var volunteer in Model.topVolunteers)
