--- a/Web/Views/Organization/Profile.cshtml
+++ b/Web/Views/Organization/Profile.cshtml
@@ -107,7 +107,7 @@
             <div class="container text-center" style="width:105%;margin-left:-1.2%;">
                 <div class="col-sm-12" style="width: 110%; margin-top:-10px; ">
                     <div>
-                        <h2 style="margin-left: 0%; margin-bottom: 10px;margin-top:-5px; margin-bottom:5px;">Events</h2>
+                        <h2 style="margin-left: 0%; margin-bottom: 10px;margin-top:-5px; margin-bottom:5px;">Offers</h2>
                         @if (User.Identity.GetUserId().ToString().Equals(Model.OrganizationId.ToString()))
                         {
                             <button style="float: right; border-radius:20px; background-color:#49274A ;border-color:#49274A" class="btn-primary" id="showModalButton"><h3 style="margin-bottom:5%;">+</h3></button>
