--- a/Web/Views/Volunteer/Homepage.cshtml
+++ b/Web/Views/Volunteer/Homepage.cshtml
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-4">
         <div class="well" id="topOrganizations" style="height:490px;">
-            <h2 style="margin-left:25%;">Top Organizations</h2>
+            <h2 style="margin-left:25%;">Top Employers</h2>
             <table class="table">
                 <tbody>
                     @foreach (var organization in Model.topOrganizations)
