--- a/Web/Views/Volunteer/Profile.cshtml
+++ b/Web/Views/Volunteer/Profile.cshtml
@@ -105,7 +105,7 @@
 
             <div class="container text-center" style="height:150px;">
                 <div class="col-sm-12" style="width:100%; margin-right:-1%; height:150px;">
-                    <h2 style="margin-left:0; margin-top:-15px; width:100%;"><b>Events</b></h2>
+                    <h2 style="margin-left:0; margin-top:-15px; width:100%;"><b>Internships</b></h2>
                     <div class="panel-body well" id="eventsList" style="height:180px;overflow-y:scroll; overflow-x:hidden; width:102.6%;margin-left:-1.2%">
                     
                     </div>
