--- a/Web/Views/Event/EditPage.cshtml
+++ b/Web/Views/Event/EditPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Web.Models.EventEditViewModel
 @{
-    ViewBag.Title = "Edit Event";
+    ViewBag.Title = "Edit Internship";
 }
 <br />
 <head>
