--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
 <body id="landing" style="background-color:#94618e">
 
-    <header class="masthead">
+    @*<header class="masthead">
         <div class="overlay">
             <div class="container">
                 <h1 class="display-1 text-white">Vocial</h1>
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
