--- a/Web/Views/Volunteer/Index.cshtml
+++ b/Web/Views/Volunteer/Index.cshtml
@@ -25,7 +25,7 @@
 <body style="overflow:hidden;">
     <div class="col-md-4" style="height:5px;margin-top:3%;">
         <div class="well" id="topOrganizations" style="overflow-y:scroll; height:450px;" >
-            <h2 style="margin-left:20%;">Top Organizations</h2>
+            <h2 style="margin-left:20%;">Top Employers</h2>
             <table class="table">
                 <tbody>
                     @foreach (var organization in Model.topOrganizations)
@@ -64,7 +64,7 @@
     <div class="col-md-8 sidebar-offcanvas" id="newsfeed" role="navigation" >
 
         <div class="panel-body">
-            <h3 style="margin-top:-2%;float:left; margin-left:40%;margin-bottom:1%;"> Events in: </h3>
+            <h3 style="margin-top:-2%;float:left; margin-left:40%;margin-bottom:1%;"> Offers in: </h3>
                 <select style="margin-top:-2%;float:right; margin-right:33%;margin-bottom:1%;" id="locationSelect">
                     @foreach (var loc in Model.Locations)
                     {
